criando a logica do jogo

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="placar">
-    <div class="jogador-placar">0</div>
-    <div class="computador-placar">0</div>
+    <div id="jogador-placar">0</div>
+    <div id ="computador-placar">0</div>
   </div>
   <div class="bola" id="bola"></div>
   <div class="paleta esquerda" id="paleta-jogador"></div>
